# uv_ptalk_p3

./: .gitmodules  CMakeLists.txt  device_tree.md  gifparser.py  sdkconfig.defaults  sdkconfig.old
components/AnimatedGIF/: CMakeLists.txt
components/AnimatedGIF/src/: AnimatedGIF.cpp
components/MatrixPanel_I2S_DMA/: CMakeLists.txt
components/arduino/: CMakeLists.txt
components/common/: CMakeLists.txt
components/common/include/: logging.h
components/common/src/: app_config.cpp
components/display_hub75/: CMakeLists.txt
components/display_hub75/include/: display_hub75.h
components/display_hub75/src/: display_hub75.cpp
components/storage_sd/: CMakeLists.txt
components/storage_sd/include/: storage_sd.h
main/: main.cpp  sdcard_main.cpp
temp/: Copilote_main.cpp  org1_main.cpp  org2_main.cpp  temp_main.cpp
temp/common/include/: app_config.h  pins.h
temp/common/src/: logging.cpp
temp/display_hub75/: CMakeLists.txt
temp/display_hub75/include/: display_hub75.h
temp/display_hub75/src/: display_hub75.cpp
temp/storage_sd/src/: storage_sd.cpp
